crates/naos-core/tests/fixtures/conformance/rejected/match-outside-switch.wc.tsx
import { Match, state } from "@naos-ui/core"

export function MatchOutsideSwitch() {
  const ready = state(false)

  return (
    <section>
      <Match when={ready()}>
        <span>Ready</span>
      </Match>
    </section>
  )
}
